# ethic-check

./: .env  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
env/: .env.example
ethic_check_core/: Anchor.toml  package.json  pnpm-lock.yaml
ethic_check_core/programs/ethic_check_core/: Cargo.toml
ethic_check_core/programs/ethic_check_core/src/: lib.rs
ethic_check_core/programs/ethic_check_core/src/constants/: constants.rs
ethic_check_core/programs/ethic_check_core/src/errors/config/: initialize.rs  update_config.rs
ethic_check_core/programs/ethic_check_core/src/errors/soulbound/: mint_soulbound_nft.rs  mod.rs  update_soulbound_nft.rs
ethic_check_core/programs/ethic_check_core/src/instructions/: mod.rs
ethic_check_core/programs/ethic_check_core/src/instructions/config/: initialize.rs  mod.rs  update_config.rs
ethic_check_core/programs/ethic_check_core/src/instructions/soulbound/: mint_soulbound_nft.rs  update_soulbound_nft.rs
ethic_check_core/programs/ethic_check_core/src/state/config/: config.rs
ethic_check_core/programs/ethic_check_core/src/utils/: account_utils.rs  mod.rs
ethic_check_core/tests/: ethic_check_core.ts
src/app/: content.tsx  globals.css  layout.tsx  page.tsx
src/hooks/: use-global-config.hooks.ts
src/models/: UserRequestsHistory.ts
src/providers/: AppWalletProvider.tsx  RootProvider.tsx  ThemeProvider.tsx
src/repository/: userRequestsHistory.ts
src/services/: aiRequestsService.ts  chatGPTService.ts  geminiService.ts  getRequestsHistory.ts  presentationService.ts
src/storage/: global.storage.ts
(+31 files in other folders)
