[package]
name = "ethic_check_core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ethic_check_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
solana-program = "1.16.5"
anchor-lang = "0.29.0"
mpl-candy-machine-core = "3.0.1"
mpl-core = "0.9.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
